--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -33,7 +34,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-database:19.3.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -41,10 +42,8 @@ dependencies {
     //파이어베이스
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
     implementation 'com.google.firebase:firebase-analytics'
-    // 카카오 로그인
-    implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.30.4'
-    // 카카오톡
-    implementation group: 'com.kakao.sdk', name: 'kakaotalk', version: '1.30.4'
-    // 카카오링크
-    implementation group: 'com.kakao.sdk', name: 'kakaolink', version: '1.30.4'
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-database:19.5.1'
+    //구글 플레이 서비스
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 }
