--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +24,6 @@
         </activity>
         <activity android:name=".google.LoginActivity"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".Write_ac.WritingActivity"/>
     </application>
-
 </manifest>
