--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <!-- 인터넷 권한 추가 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <!-- 재시작 되어도 알람이 꺼지지 않도록 -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
 
     <application
@@ -18,6 +20,7 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.enspert.app.alarms.ALARM_ALERT"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
@@ -27,4 +30,5 @@
         <activity android:name=".Write_ac.WritingActivity"/>
         <activity android:name=".ui.group.makegroup.MakeGroupActivity"/>
     </application>
+
 </manifest>
