--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.techtown.starmuri">
     <!-- 인터넷 권한 추가 -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -18,13 +19,24 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.enspert.app.alarms.ALARM_ALERT"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
 
         </activity>
         <activity android:name=".google.LoginActivity"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".Write_ac.WritingActivity"/>
         <activity android:name=".ui.group.makegroup.MakeGroupActivity"/>
+        <activity android:name=".work.IntentReceiverzz"
+            tools:ignore="Instantiatable" />
+        <receiver android:name=".work.IntentReceiverzz"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+        </receiver>
     </application>
+
 </manifest>
